--- a/src/viewFXML/tabelle.fxml
+++ b/src/viewFXML/tabelle.fxml
@@ -6,25 +6,36 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="306.0" prefWidth="806.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="viewFXML.FahradOverviewController">
+<AnchorPane prefHeight="306.0" prefWidth="806.0"
+	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="viewFXML.FahradOverviewController">
 	<children>
-		<TabPane prefHeight="299.0" prefWidth="806.0" tabClosingPolicy="UNAVAILABLE">
+		<TabPane prefHeight="299.0" prefWidth="806.0"
+			tabClosingPolicy="UNAVAILABLE">
 			<tabs>
 				<Tab text="Übersicht">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0"
+							prefHeight="180.0" prefWidth="200.0">
 							<children>
-								<TableView fx:id="fahrradTablle" prefHeight="273.0" prefWidth="806.0">
+								<TableView fx:id="fahrradTablle" prefHeight="273.0"
+									prefWidth="806.0">
 									<columns>
 										<TableColumn prefWidth="300.0" text="Bezeichnung">
 											<columns>
-												<TableColumn fx:id="name" prefWidth="150.0" text="Name" />
-												<TableColumn fx:id="artikelnummer" onEditCommit="#aenderArtikelnummer" prefWidth="150.0" text="Artikelnummer" />
+												<TableColumn fx:id="name" prefWidth="150.0"
+													text="Name" />
+												<TableColumn fx:id="artikelnummer"
+													onEditCommit="#aenderArtikelnummer" prefWidth="150.0"
+													text="Artikelnummer" />
 											</columns>
 										</TableColumn>
-										<TableColumn fx:id="typ" prefWidth="150.0" text="Typ" />
-										<TableColumn fx:id="farbe" prefWidth="150.0" text="Farbe" />
-										<TableColumn fx:id="zoll" prefWidth="150.0" text="Zoll" />
+										<TableColumn fx:id="typ" prefWidth="150.0"
+											text="Typ" />
+										<TableColumn fx:id="farbe" prefWidth="150.0"
+											text="Farbe" />
+										<TableColumn fx:id="zoll" prefWidth="150.0"
+											text="Zoll" />
 									</columns>
 								</TableView>
 							</children>
@@ -33,7 +44,8 @@
 				</Tab>
 				<Tab text="Neu">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0"
+							prefHeight="180.0" prefWidth="200.0">
 							<children>
 								<FlowPane prefHeight="200.0" prefWidth="806.0">
 									<children>
@@ -43,24 +55,27 @@
 											</FlowPane.margin>
 										</Label>
 										<TextField fx:id="nameNeu">
-                                 <FlowPane.margin>
-                                    <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-                                 </FlowPane.margin></TextField>
+											<FlowPane.margin>
+												<Insets bottom="30.0" left="30.0" right="30.0"
+													top="30.0" />
+											</FlowPane.margin>
+										</TextField>
 										<Label text="Artikelnummer">
 											<FlowPane.margin>
 												<Insets left="30.0" right="30.0" />
 											</FlowPane.margin>
 										</Label>
 										<TextField fx:id="artikelnummerNeu">
-                                 <FlowPane.margin>
-                                    <Insets right="150.0" />
-                                 </FlowPane.margin></TextField>
+											<FlowPane.margin>
+												<Insets right="150.0" />
+											</FlowPane.margin>
+										</TextField>
 										<Label text="Typ">
 											<FlowPane.margin>
 												<Insets left="30.0" right="30.0" />
 											</FlowPane.margin>
 										</Label>
-                             			 <ComboBox prefWidth="150.0" fx:id="typNeu"/>
+										<ComboBox prefWidth="150.0" fx:id="typNeu" />
 										<Label text="Farbe">
 											<FlowPane.margin>
 												<Insets left="30.0" right="30.0" />
@@ -73,14 +88,29 @@
 											</FlowPane.margin>
 										</Label>
 										<TextField fx:id="zollNeu" />
-										<Button mnemonicParsing="false" onAction="#hinzufuegen" text="Hinzufügen">
-                                 <FlowPane.margin>
-                                    <Insets left="650.0" top="30.0" />
-                                 </FlowPane.margin></Button>
+										<Button mnemonicParsing="false" onAction="#hinzufuegen"
+											text="Hinzufügen">
+											<FlowPane.margin>
+												<Insets left="650.0" top="30.0" />
+											</FlowPane.margin>
+										</Button>
 									</children>
 								</FlowPane>
 							</children>
 						</AnchorPane>
+					</content>
+				</Tab>
+				<Tab text="Diagramm">
+					<content>
+						<AnchorPane minHeight="0.0" minWidth="0.0"
+							prefHeight="180.0" prefWidth="200.0">
+							<Button mnemonicParsing="false" onAction="#diagramm"
+											text="Diagramm öffnen">
+											<FlowPane.margin>
+												<Insets left="650.0" top="30.0" />
+											</FlowPane.margin>
+										</Button>
+							</AnchorPane>
 					</content>
 				</Tab>
 			</tabs>
