--- a/src/appStart/login.fxml
+++ b/src/appStart/login.fxml
@@ -4,13 +4,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.image.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="appStart.LoginController" prefHeight="400" prefWidth="400">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="appStart.LoginController" prefHeight="500" prefWidth="400">
 	<children>
-      <TextField  fx:id="benutzer" layoutX="100" layoutY="150" prefHeight="35" prefWidth="200" promptText="Benutzer"/>
-      <PasswordField   fx:id="passwort" layoutX="100" layoutY="200" onAction="#handleLoginButtonOnAction" prefHeight="35.0" prefWidth="200" promptText="Passwort"/>
-      <Button  fx:id="btnLogin" layoutX="100" layoutY="278.0" onAction="#handleLoginButtonOnAction" prefHeight="40.0" prefWidth="90.0" text="Login" />
-      <Button  fx:id="btnCancel" layoutX="250" layoutY="278.0" onAction="#handleCancelButtonOnAction" prefHeight="40.0" prefWidth="90.0" text="Cancel" />
+	<ImageView layoutX="100" layoutY="30">
+			<Image url="@../resources/logo.png"/>
+	</ImageView>
+      <TextField  fx:id="benutzer" layoutX="100" layoutY="250" prefHeight="35" prefWidth="200" promptText="Benutzer"/>
+      <PasswordField   	fx:id="passwort" layoutX="100" layoutY="300" onAction="#handleLoginButtonOnAction"
+      					prefHeight="35.0" prefWidth="200" promptText="Passwort"/>
+      <Button  	fx:id="btnLogin" layoutX="100" layoutY="375" onAction="#handleLoginButtonOnAction"
+      			prefHeight="40" prefWidth="90" text="Login"/>
+      <Button  	fx:id="btnCancel" layoutX="250" layoutY="375" onAction="#handleCancelButtonOnAction"
+      			prefHeight="40" prefWidth="90" text="Cancel"/>
 </children>
 </AnchorPane>
 
+
+
+
+<!-- <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="appStart.LoginController" prefHeight="500" prefWidth="400" stylesheets="@../resources/AppStart.css">
+	<children>
+	<ImageView layoutX="100" layoutY="30">
+			<Image url="@../resources/logo.png"/>
+	</ImageView>
+      <TextField  fx:id="benutzer" layoutX="100" layoutY="250" prefHeight="35" prefWidth="200" promptText="Benutzer"/>
+      <PasswordField   	fx:id="passwort" layoutX="100" layoutY="300" onAction="#handleLoginButtonOnAction"
+      					prefHeight="35.0" prefWidth="200" promptText="Passwort"/>
+      <Button  	fx:id="btnLogin" layoutX="100" layoutY="375" onAction="#handleLoginButtonOnAction"
+      			prefHeight="40" prefWidth="90" text="Login" styleClass="button-round"/>
+      <Button  	fx:id="btnCancel" layoutX="250" layoutY="375" onAction="#handleCancelButtonOnAction"
+      			prefHeight="40" prefWidth="90" text="Cancel" styleClass="button-round"/>
+</children>
+</AnchorPane> -->
